# ve-metaGPT-v1

./: .gitignore  DEVELOPMENT.md  README.md  UV_MIGRATION_SUMMARY.md  UV_USAGE.md  activate_env.sh  pyproject.toml  requirements.txt  setup.py  setup_dev.sh
metagpt/provider/: __init__.py  google_gemini_api.py
src/metagpt/: __init__.py
